Moise en place de la section formations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="formations">
+        <h2>Mes formations</h2>
+        <ul>
+            <li>Formation en html, css et php</li>
+            <li>Formation sur les bases du hacking</li>
+        </ul>
+    </div>
 </body>
 </html>
