Mise en place de la section experiences

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="experiences">
+        <h2>Mes expériences</h2>
+        <p>
+            A la recherche d'expérience
+        </p>
+    </div>
 </body>
 </html>
