Mise en place de la section competences

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="competences">
+        <h2>Mes compétences</h2>
+        <ul>
+            <li>1- Maitrise des bases du html, css et php</li>
+            <li>1- Maitrise des bases du hacking</li>
+        </ul>
+    </div>
 </body>
 </html>
