--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="associations">
+        <h2>Mes liens</h2>
+        <ul>
+            <li><a href="#">+229 96631745</a></li>
+            <li><a href="#">darilsahossib@gmail.com</a></li>
+            <li><a href="#">Cotonou, Bé</a></li>
+        </ul>
+    </div>
 </body>
 </html>
