Mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h2>Mes liens</h2>
         <ul>
             <li><a href="#">+229 96631745</a></li>
-            <li><a href="#">darilsahossib@gmail.com</a></li>
-            <li><a href="#">Cotonou, Bé</a></li>
+            <li><a href="#">darilsahossib@gmail.cgit addom</a></li>
+            <li><a href="#">Cotonou, Bénin</a></li>
         </ul>
     </div>
 </body>
